--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"mongoose": "^6.7.1",
+		"nanoid": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"sharp": "^0.31.2",
