--- a/api/package.json
+++ b/api/package.json
@@ -5,22 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc-watch --onSuccess \"node dist\""
+    "dev": "tsc-watch --onSuccess \"node dist\"",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "immer": "^9.0.16",
     "joi": "^17.7.0",
+    "mongoose": "^6.7.2",
     "node-cache": "^5.1.2",
     "queue": "^6.0.2",
     "sharp": "^0.31.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@types/sharp": "^0.31.0",
