make db backups optional

--- a/api/.env.example
+++ b/api/.env.example
@@ -4,6 +4,9 @@ PORT=
 # Path to images (relative to /api)
 IMAGE_FOLDER_PATH=./static
 
-# MongoDB
+# Enable state backups using MongDB?
+DB_ENABLED=true
+
+# MongoDB settings (only needed if DB_ENABLED is true)
 DB_URI=
 DB_NAME=
